[package]
name = "marysue"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
encoding_rs = "0.8.17"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
convert-base = "1.0.2"

[dev-dependencies]
criterion = "0.2"

[lib]
crate-type = ["dylib", "rlib"]
name = "marysue"
path = "src/lib.rs"

[[bench]]
name = "main"
harness = false

[profile.release]
lto = true
opt-level = "s"