[package]
name = "crypto-invert"
version = "1.0.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Prime lib for Nyar"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/crypto-moe"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]


[dev-dependencies]