[package]
name = "crypto-marysue"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Prime lib for Nyar"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nyar-lang/nyar-prime"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
rand = "0.7.0"
encoding_rs = "0.8.17"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
convert-base = "1.0.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "main"
harness = false
