[package]
name = "crypto-marysue"
version = "0.3.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Prime lib for Nyar"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/crypto-marysue"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
rand = "0.7.0"
encoding_rs = "0.8.17"
lazy_static = "1.4.0"
flate2 = { version = "1.0", features = ["rust_backend"], default-features = false }
crypto-random-map = {path = "../crypto-random-map", version = "0.2.0"}

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "dense_test"
path = "benches/main.rs"
harness = false
