[package]
name = "crypto-morse"
version = "0.2.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Encoding and decoding morse code for unicode"
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/crypto-moe"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
