[package]
name = "crypto-random-map"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "..."
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/nyar-lang/nyar-prime"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
rand = "0.7.0"
convert-base = "1.0.2"
