[package]
name = "crypto-random-map"
version = "0.2.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "..."
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/crypto-marysue"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
rand = "0.7.0"
convert-base = "1.0.2"
