[package]
publish = false
name = "crypto-marysue-wasm"
version = "1.0.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "..."
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/GalAster/crypto-marysue"
exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
wasm-bindgen = "0.2.58"
crypto-marysue = {path = "../crypto-marysue", version = "0.3.0"}

[lib]
crate-type = ["cdylib"]