[package]
publish = false
name = "wasm-crypto-moe"
version = "1.0.2"
authors = ["Aster <galaster@foxmail.com>"]
description = "..."
edition = "2018"
license = "MPL-2.0"
readme = "Readme.md"
repository = "https://github.com/GalAster/crypto-moe"
exclude = ["/tests/*"]

[dependencies]
wasm-bindgen = "0.2.68"
crypto-marysue = {path = "../crypto-marysue", version = "0.3.0"}
crypto-aaencode = {path = "../crypto-aaencode", version = "0.1.0"}
crypto-invert = {path = "../crypto-invert", version = "1.0.0"}

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false
wasm-opt = ["-Oz", "--enable-mutable-globals"]